navbar header wrap issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,8 @@ section, header, footer {
 }
 
 .trapezoid {
-  min-width: 250px;
+  width: 250px;
+  white-space: nowrap;
   height: 50px;
   background: #cf0e0e;
   line-height: 60px;
@@ -456,7 +457,6 @@ section, header, footer {
 }
 
 .program-displaytitle {    
-  width: 162px;    
   font-size: 21px;
   font-weight: bold;
   text-align: center;
